--- a/index.htm
+++ b/index.htm
@@ -1,15 +1,66 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
-  <title>HTML5 Template</title>
+  <title>Brain Boost</title>
   <meta name="description" content="HTML5 Template">
 
 </head>
 
 <body>
+    <h1 style="font-family:'Comic Sans MS'">Brain Boost</h1>
+    <!--<p>
+        Hello World :) <br/>
+        This is a second line
+    </p>-->
+    <img src="images/logo.png" width="600" height="300" alt="Brain Boost logo" />
+    <!--<a href="http://www.missouristate.edu/"><img src="logo.png" width="475" height="250" alt="Brain Boost logo" /></a>-->
+
+    <p style="font-family:'Comic Sans MS'">
+        Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
+        It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
+        Brain Boost is:
+
+        <ul style="font-family:'Comic Sans MS'">
+            <li>Safe</li>
+            <li>Effective</li>
+            <li>Clinically Tested</li>
+        </ul>
+
+    </p>
+    <p style="text-decoration:underline">
+    If you don't like our product, we have a satisfaction guarantee policy! Just send it back, no questions asked!
+    </p>
+    
+    <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
+
+    <!--<ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>-->
+
+    <!--Table
+    <table border="1" cellpadding="5" cellspacing="5">
+        <caption>This table holds my data</caption>
+        <tr>
+            <th>Table Heading</th>
+            <td>Row 1</td>
+        </tr>
+        <tr>
+            <th>Table Heading 2</th>
+            <td>Row 2</td>
+        </tr>
+
+    </table>-->
 
 </body>
 </html>
