--- a/index.htm
+++ b/index.htm
@@ -10,32 +10,40 @@
 </head>
 
 <body>
-    <h1 style="font-family:'Comic Sans MS'">Brain Boost</h1>
+    <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
     <!--<p>
         Hello World :) <br/>
         This is a second line
     </p>-->
-    <img src="images/logo.png" width="600" height="300" alt="Brain Boost logo" />
-    <!--<a href="http://www.missouristate.edu/"><img src="logo.png" width="475" height="250" alt="Brain Boost logo" /></a>-->
+    <center>
+        <img src="images/logo.png" width="600" height="300" alt="Brain Boost logo">
+        <!--<a href="http://www.missouristate.edu/"><img src="logo.png" width="475" height="250" alt="Brain Boost logo" /></a>-->
+    </center>
 
-    <p style="font-family:'Comic Sans MS'">
-        Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
-        It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
-        Brain Boost is:
+        <p style="font-family:'Comic Sans MS'; text-align:center">
+            Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
+            It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
+        </p>
+        <p style="font-family:'Comic Sans MS'; font-size:medium">
+            Brain Boost Is...
+        </p>
 
         <ul style="font-family:'Comic Sans MS'">
+
             <li>Safe</li>
             <li>Effective</li>
             <li>Clinically Tested</li>
         </ul>
 
-    </p>
-    <p style="text-decoration:underline">
-    If you don't like our product, we have a satisfaction guarantee policy! Just send it back, no questions asked!
-    </p>
-    
-    <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
+    <center>
+        <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
 
+        <a href="knowles201.github.io/energysupplementpage.html"><img src="images/logo.png" width="250" height="100" /></a>
+    </center>
+
+    <p style="text-decoration:underline; text-align:center">
+        If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
+    </p>
     <!--<ul>
         <li>Item 1</li>
         <li>Item 2</li>
