adjust images/links
adjusted some images and adjusted links

--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -18,7 +18,7 @@
 Combat brain fog and lack of attention with Clean Clarity!</pre>
                 </td>
                 <td><img src="images/focusproduct1.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/product cost.png" width="200" height="125" /> </td>
+                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Attentive Combo</th>
@@ -27,7 +27,7 @@ Combat brain fog and lack of attention with Clean Clarity!</pre>
 Combine with one of our energy supplements for max results.</pre>
                 </td>
                 <td><img src="images/focusproduct2.jpeg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/product cost.png" width="200" height="125" /> </td>
+                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Calm Clarity</th>
@@ -36,7 +36,7 @@ Combine with one of our energy supplements for max results.</pre>
 Calm Clarity is natural and safe!</pre>
                 </td>
                 <td><img src="images/focusproduct3.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/product cost.png" width="200" height="125" /> </td>
+                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Brain-Fog Destroyer</th>
@@ -45,7 +45,7 @@ Calm Clarity is natural and safe!</pre>
 Crush brain-fog with our Destroyer blend!</pre>
                 </td>
                 <td><img src="images/focusproduct4.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/product cost.png" width="200" height="125" /> </td>
+                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Absolute Attention</th>
@@ -54,10 +54,10 @@ Crush brain-fog with our Destroyer blend!</pre>
 Forget memory loss, get Absolute Attention!</pre>
                 </td>
                 <td><img src="images/focusproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/product cost.png" width="200" height="125" /> </td>
+                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
         </table>
-        <a href="knowles201.github.io/index.htm"> Home Page</a>
+        <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
     <p style="text-decoration:underline; text-align:center">
         If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
