--- a/index.htm
+++ b/index.htm
@@ -37,8 +37,12 @@
 
     <center>
         <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
-
-        <a href="knowles201.github.io/energysupplementpage.html"><img src="images/logo.png" width="250" height="100" /></a>
+        <br />
+        <p style="font-family:'Comic Sans MS'">
+            Shop our selection by clicking on the images below!
+        </p>
+        <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink.png" width="375" height="150" /></a>
+        <a href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="375" height="150" /></a>
     </center>
 
     <p style="text-decoration:underline; text-align:center">
