--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -18,14 +18,12 @@ across Europe and Asia.
 
 Expereince a fast, powerful boost of energy and productivity!</pre></td>
                 <td><img src="images/energyproduct1.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Powerhouse Combo</th>
                 <td><pre>Insane natural energy that lasts upwards of 10 hours.
 No crash, just powerful results with the Powerhouse Combo.</pre></td>
                 <td><img src="images/energyproduct2.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Energizer</th>
@@ -34,7 +32,6 @@ No crash, just powerful results with the Powerhouse Combo.</pre></td>
 With energizer, you can keep up with whatever the world throws at you!</pre>
                 </td>
                 <td><img src="images/energyproduct3.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Dynamic Revitalizer</th>
@@ -43,7 +40,6 @@ With energizer, you can keep up with whatever the world throws at you!</pre>
 Dynamic Revitalizer hydrates and restores, making you ready to tackle the day!</pre>
                 </td>
                 <td><img src="images/energyproduct4.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
             <tr>
                 <th>Anti-Fatigue PostWorkout</th>
@@ -52,9 +48,13 @@ Dynamic Revitalizer hydrates and restores, making you ready to tackle the day!</
 This natural energy booster prevents muscle soreness and brainfog.</pre>
                 </td>
                 <td><img src="images/energyproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/productcost.jpg" width="200" height="150" /> </td>
             </tr>
         </table>
+        <p style="font-family:'Comic Sans MS'; text-align:center"  >
+            All of our products are: <br /> <img src="images/productcost.png" width="250" height="150" />
+        </p>
+
+
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
     <p style="text-decoration:underline; text-align:center">
