--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -53,7 +53,7 @@ Forget memory loss, get Absolute Attention!</pre>
             </tr>
         </table>
         <p style="font-family:'Comic Sans MS'; text-align:center">
-            All of our products are: <br /> <img src="images/priceimage.jpg" width="250" height="150" />
+            All of our products are: <br /> <img src="images/focusproduct6.jpg" width="250" height="200" />
         </p>
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
