--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -51,7 +51,7 @@ This natural energy booster prevents muscle soreness and brainfog.</pre>
             </tr>
         </table>
         <p style="font-family:'Comic Sans MS'; text-align:center"  >
-            All of our products are: <br /> <img src="images/priceimage.jpg" width="250" height="150" />
+            All of our products are: <br /> <img src="images/focusproduct6.jpg" width="250" height="200" />
         </p>
 
 
