--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -8,6 +8,9 @@
 <body>
     <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
     <h2 style="font-family:'Comic Sans MS'; text-align:center">Energy Supplements</h2>
+    <br /> <p style="font-family:'Comic Sans MS'; text-align:center">
+    All of our products are: <br /> <img src="images/focusproduct6.jpg" width="225" height="200" />
+</p>
     <center>
         <table border="1" cellpadding="5" cellspacing="5">
             <caption>Browse our selection of high quality energy supplements</caption>
@@ -50,11 +53,6 @@ This natural energy booster prevents muscle soreness and brainfog.</pre>
                 <td><img src="images/energyproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
             </tr>
         </table>
-        <p style="font-family:'Comic Sans MS'; text-align:center"  >
-            All of our products are: <br /> <img src="images/focusproduct6.jpg" width="250" height="200" />
-        </p>
-
-
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
     <p style="text-decoration:underline; text-align:center">
