--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -9,6 +9,9 @@
     <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
     <h2 style="font-family:'Comic Sans MS'; text-align:center">Mental-Focus Supplements</h2>
     <center>
+        <br /> <p style="font-family:'Comic Sans MS'; text-align:center">
+            All of our products are: <br /> <img src="images/focusproduct6.jpg" width="225" height="200" />
+        </p>
         <table border="1" cellpadding="5" cellspacing="5">
             <caption>Browse our selection of high quality mental-focus supplements</caption>
             <tr>
@@ -52,9 +55,6 @@ Forget memory loss, get Absolute Attention!</pre>
                 <td><img src="images/focusproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
             </tr>
         </table>
-        <p style="font-family:'Comic Sans MS'; text-align:center">
-            All of our products are: <br /> <img src="images/focusproduct6.jpg" width="250" height="200" />
-        </p>
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
     <p style="text-decoration:underline; text-align:center">
