--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -9,7 +9,7 @@
     <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
     <h2 style="font-family:'Comic Sans MS'; text-align:center">Energy Supplements</h2>
     <br /> <p style="font-family:'Comic Sans MS'; text-align:center">
-    All of our products are: <br /> <img src="images/pricefinal.jpg" width="225" height="200" />
+    All of our products are: <br /> <img src="images/finalprice2.jpg" width="225" height="200" />
 </p>
     <center>
         <table border="1" cellpadding="5" cellspacing="5">
