--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -10,7 +10,7 @@
     <h2 style="font-family:'Comic Sans MS'; text-align:center">Mental-Focus Supplements</h2>
     <center>
         <br /> <p style="font-family:'Comic Sans MS'; text-align:center">
-            All of our products are: <br /> <img src="images/pricefinal.jpg" width="225" height="200" />
+            All of our products are: <br /> <img src="images/finalprice2.jpg" width="225" height="200" />
         </p>
         <table border="1" cellpadding="5" cellspacing="5">
             <caption>Browse our selection of high quality mental-focus supplements</caption>
