--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -9,9 +9,6 @@
     <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
     <h2 style="font-family:'Comic Sans MS'; text-align:center">Mental-Focus Supplements</h2>
     <center>
-        <br /> <p style="font-family:'Comic Sans MS'; text-align:center">
-            All of our products are: <br /> <img src="images/finalprice2.jpg" width="225" height="200" />
-        </p>
         <table border="1" cellpadding="5" cellspacing="5">
             <caption>Browse our selection of high quality mental-focus supplements</caption>
             <tr>
@@ -21,6 +18,7 @@
 Combat brain fog and lack of attention with Clean Clarity!</pre>
                 </td>
                 <td><img src="images/focusproduct1.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
             <tr>
                 <th>Attentive Combo</th>
@@ -29,6 +27,7 @@ Combat brain fog and lack of attention with Clean Clarity!</pre>
 Combine with one of our energy supplements for max results.</pre>
                 </td>
                 <td><img src="images/focusproduct2.jpeg" width="200" height="150" alt="energyproduct1" /> </td>
+                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
             <tr>
                 <th>Calm Clarity</th>
@@ -37,6 +36,7 @@ Combine with one of our energy supplements for max results.</pre>
 Calm Clarity is natural and safe!</pre>
                 </td>
                 <td><img src="images/focusproduct3.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
             <tr>
                 <th>Brain-Fog Destroyer</th>
@@ -45,6 +45,7 @@ Calm Clarity is natural and safe!</pre>
 Crush brain-fog with our Destroyer blend!</pre>
                 </td>
                 <td><img src="images/focusproduct4.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
             <tr>
                 <th>Absolute Attention</th>
@@ -53,6 +54,7 @@ Crush brain-fog with our Destroyer blend!</pre>
 Forget memory loss, get Absolute Attention!</pre>
                 </td>
                 <td><img src="images/focusproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
         </table>
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
