contact us form
added contact us form, tweaked homepage, clean up

--- a/index.htm
+++ b/index.htm
@@ -37,12 +37,15 @@
 
     <center>
         <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
-        <br />
-        <p style="font-family:'Comic Sans MS'">
-            Shop our selection by clicking on the images below!
-        </p>
+        <br /><br /><hr />
+        <h3 style="font-family:'Comic Sans MS'">
+            Shop our wide selection by clicking on a category below!
+        </h3>
         <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink.png" width="375" height="150" /></a>
         <a href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="375" height="150" /></a>
+        <br /><br /><hr />
+        <h3 style="font-family:'Comic Sans MS'">Comments, questions, or concerns? <br /> Click the image below to speak with a Brain Boost representitive.</h3>
+        <a href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="350" height="125" /></a>
     </center>
 
     <p style="text-decoration:underline; text-align:center">
