css style sheet added

--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,14 @@
 
   <title>Brain Boost</title>
   <meta name="description" content="HTML5 Template">
+    <style type="text/css">
+        @import url(style.css);
+    </style>
 
 </head>
 
 <body>
-    <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
+    <h1 class="creamColor" style="text-align:center">Brain Boost</h1>
     <!--<p>
         Hello World :) <br/>
         This is a second line
@@ -20,15 +23,15 @@
         <!--<a href="http://www.missouristate.edu/"><img src="logo.png" width="475" height="250" alt="Brain Boost logo" /></a>-->
     </center>
 
-        <p style="font-family:'Comic Sans MS'; text-align:center">
+        <p text-align:center" class="creamColor">
             Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
             It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
         </p>
-        <p style="font-family:'Comic Sans MS'; font-size:medium">
+        <p font-size:medium" class= "creamColor">
             Brain Boost Is...
         </p>
 
-        <ul style="font-family:'Comic Sans MS'">
+        <ul class="creamColor">
 
             <li>Safe</li>
             <li>Effective</li>
@@ -38,17 +41,20 @@
     <center>
         <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
         <br /><br /><hr />
-        <h3 style="font-family:'Comic Sans MS'">
+
+        <h3 class="creamColor">
             Shop our wide selection by clicking on a category below!
         </h3>
-        <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink.png" width="375" height="150" /></a>
+        <p>
+        <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="375" height="150" /></a>
         <a href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="375" height="150" /></a>
+        </p>
         <br /><br /><hr />
-        <h3 style="font-family:'Comic Sans MS'">Comments, questions, or concerns? <br /> Click the image below to speak with a Brain Boost representitive.</h3>
+        <h3 class="creamColor">Comments, questions, or concerns? <br /> Click the image below to speak with a Brain Boost representitive.</h3>
         <a href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="350" height="125" /></a>
     </center>
 
-    <p style="text-decoration:underline; text-align:center">
+    <p style="text-decoration:underline; text-align:center" class="creamColor">
         If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
     </p>
     <!--<ul>
