--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <title>Brain Boost: Energy Supplements</title>
+    <style type="text/css">
+        @import url(style.css);
+    </style>
 </head>
 <body>
-    <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
-    <h2 style="font-family:'Comic Sans MS'; text-align:center">Energy Supplements</h2>
+    <h1 style="text-align:center" class="creamColor">Brain Boost</h1>
+    <h2 style="text-align:center" class="creamColor">Energy Supplements</h2>
     <center>
-        <table border="1" cellpadding="5" cellspacing="5">
-            <caption>Browse our selection of high quality energy supplements</caption>
+        <table border="1" cellpadding="5" cellspacing="5" class="tableColorFormat">
+            <caption class="creamColor">Browse our selection of high quality energy supplements</caption>
             <tr>
                 <th>Effective Energy Blend</th>
                 <td><pre>One of our best-sellers, a powerful blend of over 20 herbal blends from 
@@ -57,7 +60,7 @@ This natural energy booster prevents muscle soreness and brainfog.</pre>
         </table>
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
-    <p style="text-decoration:underline; text-align:center">
+    <p style="text-decoration:underline; text-align:center" class="creamColor">
         If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
     </p>
 </body>
