--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <title>Brain Boost: Focus Supplements</title>
+    <style type="text/css">
+        @import url(style.css);
+    </style>
+
 </head>
 <body>
-    <h1 style="font-family:'Comic Sans MS'; text-align:center">Brain Boost</h1>
-    <h2 style="font-family:'Comic Sans MS'; text-align:center">Mental-Focus Supplements</h2>
+    <h1 style="text-align:center" class="creamColor">Brain Boost</h1>
+    <h2 style="text-align:center" class="creamColor">Mental-Focus Supplements</h2>
     <center>
-        <table border="1" cellpadding="5" cellspacing="5">
-            <caption>Browse our selection of high quality mental-focus supplements</caption>
+        <table border="1" cellpadding="5" cellspacing="5" class="tableColorFormat">
+            <caption class="creamColor">Browse our selection of high quality mental-focus supplements</caption>
             <tr>
                 <th>Clean Clarity</th>
                 <td>
@@ -59,7 +63,7 @@ Forget memory loss, get Absolute Attention!</pre>
         </table>
         <a href="http://knowles201.github.io/index.htm"> Home Page</a>
     </center>
-    <p style="text-decoration:underline; text-align:center">
+    <p style="text-decoration:underline; text-align:center" class="creamColor">
         If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
     </p>
 </body>
