added styling to contactus page

--- a/contactuspage.html
+++ b/contactuspage.html
@@ -4,30 +4,33 @@
 <head>
     <meta charset="utf-8" />
     <title>Contact Us</title>
+    <style type="text/css">
+        @import url(style.css);
+    </style>
 </head>
 <body>
     <Center>
-        <h1>Brain Boost</h1>
+        <h1 class="creamColor">Brain Boost</h1>
         <hr />
         <img src="images/logo.png" width="425" height="230"/><br />
         
-        <h2>Contact Us</h2>
+        <h2 class="creamColor">Contact Us</h2>
         <form action="">
-            <p>
+            <p class="creamColor">
                 Thank you for visiting Brain Boost. <br />
                 Using the form below is the quickest and easiest way to get ahold of our support team!
 
                 <br /><hr /><br />
 
-                <label style="font-style:oblique">
+                <label style="font-style:oblique" class="creamColor">
                     First Name: 
                     <Input type="text" name="name" size="12" /><br />
                 </label><br />
-                <label style="font-style:oblique">
+                <label style="font-style:oblique" class="creamColor">
                     Last Name: 
                     <Input type="text" name="name" size="12" /><br />
                 </label><br />
-                <label style="font-style:oblique">
+                <label style="font-style:oblique" class="creamColor">
                     Email: 
                     <Input type="text" name="email" size="25" /><br />
                 </label><br />
@@ -42,7 +45,7 @@
 
                 <br /><br />
 
-                <label>
+                <label class="creamColor">
                     Leave a Comment Below <br />
                     <textarea rows="7" cols="40"></textarea>
                 </label>
