Formatting/CSS Styling

--- a/contactuspage.html
+++ b/contactuspage.html
@@ -8,30 +8,65 @@
         @import url(style.css);
     </style>
 </head>
-<body>
-    <Center>
-        <h1 class="creamColor">Brain Boost</h1>
-        <hr />
-        <img src="images/logo.png" width="425" height="230"/><br />
-        
-        <h2 class="creamColor">Contact Us</h2>
+
+    <!--Contact Us Heading-->
+    <body style="padding-bottom: 150px;">
+
+        <div style="border: solid 2px;">
+            <h1 class="titleHeading">Brain Boost</h1>
+            <p class="logoHeading">
+                <img src="images/logo.png" width="450" height="225" alt="Brain Boost logo">
+            </p>
+
+            <p class="sloganHeading">
+                Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
+                It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
+            </p>
+            <p class="featureHeader">
+                Brain Boost Is...
+            </p>
+
+            <ul class="featureList">
+
+                <li>Safe</li>
+                <li>Effective</li>
+                <li>Clinically Tested</li>
+            </ul>
+        </div>
+
+        <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 305px; position:absolute; top:8px;right:6px;"></div>
+        <div style="border-bottom: 4px solid #000; width: 1329px"></div>
+
+        <!--Links-->
+        <h3 class="linksHeading">
+            Links
+        </h3>
+        <p>
+            <a class="focusStoreLink" href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="250" height="95" /></a>
+            <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
+            <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
+        </p>
+
+        <!--Form-->
+        <center>
         <form action="">
+            <h1 class="creamColor">Contact Us</h1>
             <p class="creamColor">
-                Thank you for visiting Brain Boost. <br />
+                <br />
                 Using the form below is the quickest and easiest way to get ahold of our support team!
 
-                <br /><hr /><br />
+                <br /><br />
 
                 <label style="font-style:oblique" class="creamColor">
-                    First Name: 
+                    First Name:
                     <Input type="text" name="name" size="12" /><br />
                 </label><br />
                 <label style="font-style:oblique" class="creamColor">
-                    Last Name: 
+                    Last Name:
                     <Input type="text" name="name" size="12" /><br />
                 </label><br />
                 <label style="font-style:oblique" class="creamColor">
-                    Email: 
+                    Email:
                     <Input type="text" name="email" size="25" /><br />
                 </label><br />
 
@@ -53,9 +88,10 @@
                 <br /><br />
                 <input type="submit" value="Submit Form" />
                 <input type="reset" value="Reset Form" />
-                </p>
-            </form>
+            </p>
+        </form>
         <a href="http://knowles201.github.io/index.htm">Return Home</a><br />
-        </Center>
+        </center>
+
     </body>
 </html>
