--- a/index.htm
+++ b/index.htm
@@ -12,76 +12,54 @@
 
 </head>
 
-<body>
-    <h1 class="creamColor" style="text-align:center">Brain Boost</h1>
-    <!--<p>
-        Hello World :) <br/>
-        This is a second line
-    </p>-->
-    <center>
-        <img src="images/logo.png" width="600" height="300" alt="Brain Boost logo">
-        <!--<a href="http://www.missouristate.edu/"><img src="logo.png" width="475" height="250" alt="Brain Boost logo" /></a>-->
-    </center>
+<body style="padding-bottom: 150px;">
+    
+    <!--Heading/Logo/Slogan-->
+    <div style="border: solid 2px;">
+    <h1 class="titleHeading" >Brain Boost</h1>
+    <p class="logoHeading">
+        <img src="images/logo.png" width="450" height="225" alt="Brain Boost logo">
+    </p>
 
-        <p text-align:center" class="creamColor">
+        <p class="sloganHeading">
             Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
             It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
         </p>
-        <p font-size:medium" class= "creamColor">
+        <p class= "featureHeader">
             Brain Boost Is...
         </p>
 
-        <ul class="creamColor">
+        <ul class="featureList">
 
             <li>Safe</li>
             <li>Effective</li>
             <li>Clinically Tested</li>
         </ul>
+    </div>
+      
+    <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 305px; position:absolute; top:8px;right:6px;"></div>
+    <div style="border-bottom: 4px solid #000; width: 1329px"></div>
 
-    <center>
-        <img src="images/logo2.png" width="375" height="250" alt="Brain Boost Logo2" />
-        <br /><br /><hr />
+    <!--Content on Homepage-->
 
-        <h3 class="creamColor">
-            Shop our wide selection by clicking on a category below!
-        </h3>
-        <p>
-        <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="375" height="150" /></a>
-        <a href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="375" height="150" /></a>
-        </p>
-        <br /><br /><hr />
-        <h3 class="creamColor">Comments, questions, or concerns? <br /> Click the image below to speak with a Brain Boost representitive.</h3>
-        <a href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="350" height="125" /></a>
-    </center>
+    <a class="madeInUSA"><img src="images/madeinusa.png" width="200" height="145" /></a>
+    <p class="usaText">All Brain Boost Products are proudly manufactured and packaged in Springfield Missouri, USA!</p>
+    <a class="safetyImage"><img src="images/safety.png" width="235" height="110" /></a>
+    <p class="safetyText">Our number one priority is your safety. Our products undergo rigerous quality testing and volunteer trials!</p>
+    <a class="satisfactionImage"><img src="images/satisfactionimage.png" width="200" height="145" /></a>
+    <p class="satisfactionText">Your satisfaction is 100% guarenteed when you order through Brain Boost. Return anytime, for any reason and shipping is on us!</p>
 
-    <p style="text-decoration:underline; text-align:center" class="creamColor">
-        If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
-    </p>
-    <!--<ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
+            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ol>-->
-
-    <!--Table
-    <table border="1" cellpadding="5" cellspacing="5">
-        <caption>This table holds my data</caption>
-        <tr>
-            <th>Table Heading</th>
-            <td>Row 1</td>
-        </tr>
-        <tr>
-            <th>Table Heading 2</th>
-            <td>Row 2</td>
-        </tr>
-
-    </table>-->
-
+    <!--Sidebar Links-->
+            <h3 class="linksHeading">
+                Links
+            </h3>
+            <p>
+                <a class="focusStoreLink" href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="250" height="95"/></a>
+                <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
+                <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
+            </p>
+  
 </body>
 </html>
