--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -8,60 +8,100 @@
         @import url(style.css);
     </style>
 </head>
-<body>
-    <h1 style="text-align:center" class="creamColor">Brain Boost</h1>
-    <h2 style="text-align:center" class="creamColor">Energy Supplements</h2>
-    <center>
-        <table border="1" cellpadding="5" cellspacing="5" class="tableColorFormat">
-            <caption class="creamColor">Browse our selection of high quality energy supplements</caption>
-            <tr>
-                <th>Effective Energy Blend</th>
-                <td><pre>One of our best-sellers, a powerful blend of over 20 herbal blends from 
-across Europe and Asia.
+<body style="padding-bottom: 150px;">
 
-Expereince a fast, powerful boost of energy and productivity!</pre></td>
-                <td><img src="images/energyproduct1.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
-            </tr>
-            <tr>
-                <th>Powerhouse Combo</th>
-                <td><pre>Insane natural energy that lasts upwards of 10 hours.
-No crash, just powerful results with the Powerhouse Combo.</pre></td>
-                <td><img src="images/energyproduct2.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
-            </tr>
-            <tr>
-                <th>Energizer</th>
-                <td>
-                    <pre>Energizer is notorious for providing high energy with no jitters.
-With energizer, you can keep up with whatever the world throws at you!</pre>
-                </td>
-                <td><img src="images/energyproduct3.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
-            </tr>
-            <tr>
-                <th>Dynamic Revitalizer</th>
-                <td>
-                    <pre>Everyone has nights where they wish they could've gotten more sleep.
-Dynamic Revitalizer hydrates and restores, making you ready to tackle the day!</pre>
-                </td>
-                <td><img src="images/energyproduct4.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
-            </tr>
-            <tr>
-                <th>Anti-Fatigue PostWorkout</th>
-                <td>
-                    <pre>Workouts can be tiring, but not with Anti-Fatigue Postworkout.
-This natural energy booster prevents muscle soreness and brainfog.</pre>
-                </td>
-                <td><img src="images/energyproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
-                <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
-            </tr>
-        </table>
-        <a href="http://knowles201.github.io/index.htm"> Home Page</a>
-    </center>
-    <p style="text-decoration:underline; text-align:center" class="creamColor">
-        If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
+    <!--Heading/Logo/Slogan-->
+
+    <h1 class="titleHeading">Brain Boost</h1>
+    <p class="logoHeading">
+        <img src="images/logo.png" width="450" height="225" alt="Brain Boost logo">
     </p>
+
+    <p class="sloganHeading">
+        Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
+        It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
+    </p>
+    <p class="featureHeader">
+        Brain Boost Is...
+    </p>
+
+    <ul class="featureList">
+
+        <li>Safe</li>
+        <li>Effective</li>
+        <li>Clinically Tested</li>
+    </ul>
+
+    <div style="border-top: solid 4px #000; position:absolute; width:1495px"></div>
+    <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 300px; position:absolute; top:8px; left:1500px;"></div>
+    <div style="border-bottom: 4px solid #000; width: 1495px"></div>
+
+    <!--Sidebar Links-->
+    <h3 class="linksHeading">
+        Links
+    </h3>
+    <p>
+        <a class="focusStoreLink" href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="250" height="95" /></a>
+        <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
+        <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
+    </p>    
+
+
+
+    <!--Table-->
+    <center>
+    <table border="1" cellpadding="1" cellspacing="1" class="table">
+        <caption class="tableCaption">Energy Supplements</caption>
+        <tr>
+            <th>Effective Energy Blend</th>
+            <td>
+                <pre>One of our best-sellers, a powerful blend of over 20 herbal blends from 
+across Europe and Asia.
+Expereince a fast, powerful boost of energy and productivity!</pre>
+            </td>
+            <td><img src="images/energyproduct1.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+            <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
+        </tr>
+        <tr>
+            <th>Powerhouse Combo</th>
+            <td>
+                <pre>Insane natural energy that lasts upwards of 10 hours.
+No crash, just powerful results with the Powerhouse Combo.</pre>
+            </td>
+            <td><img src="images/energyproduct2.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+            <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
+        </tr>
+        <tr>
+            <th>Energizer</th>
+            <td>
+                <pre>Energizer is notorious for providing high energy with no jitters.
+With energizer, you can keep up with whatever the world throws at you!</pre>
+            </td>
+            <td><img src="images/energyproduct3.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+            <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
+        </tr>
+        <tr>
+            <th>Dynamic Revitalizer</th>
+            <td>
+                <pre>Everyone has nights where they wish they could've gotten more sleep.
+Dynamic Revitalizer hydrates and restores, making you ready to tackle the day!</pre>
+            </td>
+            <td><img src="images/energyproduct4.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+            <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
+        </tr>
+        <tr>
+            <th>Anti-Fatigue PostWorkout</th>
+            <td>
+                <pre>Workouts can be tiring, but not with Anti-Fatigue Postworkout.
+This natural energy booster prevents muscle soreness and brainfog.</pre>
+            </td>
+            <td><img src="images/energyproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
+            <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
+        </tr>
+    </table> 
+    </center>
+
+    <!--Footer Links--> 
+    <a href="http://knowles201.github.io/index.htm" class="homePage"> Home Page</a>
 </body>
 </html>
