--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -9,12 +9,48 @@
     </style>
 
 </head>
-<body>
-    <h1 style="text-align:center" class="creamColor">Brain Boost</h1>
-    <h2 style="text-align:center" class="creamColor">Mental-Focus Supplements</h2>
+<body style="padding-bottom: 150px;">
+
+    <!--Heading/Logo/Slogan-->
+    
+        <h1 class="titleHeading">Brain Boost</h1>
+        <p class="logoHeading">
+            <img src="images/logo.png" width="450" height="225" alt="Brain Boost logo">
+        </p>
+
+        <p class="sloganHeading">
+            Welcome to Brain Boost, the most effective way to enhance cognitive functioning through natural herbal ingredients.
+            It's our life passion to help top performers break boundaries and crush the competition. <br /><br />
+        </p>
+        <p class="featureHeader">
+            Brain Boost Is...
+        </p>
+
+        <ul class="featureList">
+
+            <li>Safe</li>
+            <li>Effective</li>
+            <li>Clinically Tested</li>
+        </ul>
+
+    <div style="border-top: solid 4px #000; position:absolute; width:1495px"></div>
+    <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 300px; position:absolute; top:8px; left:1500px;"></div>
+    <div style="border-bottom: 4px solid #000; width: 1495px"></div>
+
+    <!--Sidebar Links-->
+    <h3 class="linksHeading">
+        Links
+    </h3>
+    <p>
+        <a class="focusStoreLink" href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="250" height="95" /></a>
+        <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
+        <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
+    </p>
+
+    <!--Table-->
     <center>
-        <table border="1" cellpadding="5" cellspacing="5" class="tableColorFormat">
-            <caption class="creamColor">Browse our selection of high quality mental-focus supplements</caption>
+        <table border="1" cellpadding="1" cellspacing="1" class="table">
+            <caption class="tableCaption">Focus Supplements </caption>
             <tr>
                 <th>Clean Clarity</th>
                 <td>
@@ -60,11 +96,10 @@ Forget memory loss, get Absolute Attention!</pre>
                 <td><img src="images/focusproduct5.jpg" width="200" height="150" alt="energyproduct1" /> </td>
                 <td><img src="images/pricefinal.jpg" width="200" height="150" /></td>
             </tr>
-        </table>
-        <a href="http://knowles201.github.io/index.htm"> Home Page</a>
+        </table>    
     </center>
-    <p style="text-decoration:underline; text-align:center" class="creamColor">
-        If you don't like our products, we have a satisfaction guarantee policy! Just send it back, no questions asked!
-    </p>
-</body>
+
+    <!--Footer Links--> 
+    <a href="http://knowles201.github.io/index.htm" class="homePage"> Home Page</a>
+    </body>
 </html>
