--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -7,6 +7,7 @@
     <style type="text/css">
         @import url(style.css);
     </style>
+    <script src="myjavascript.js"></script>
 </head>
 <body style="padding-bottom: 150px;">
 
@@ -103,5 +104,12 @@ This natural energy booster prevents muscle soreness and brainfog.</pre>
 
     <!--Footer Links--> 
     <a href="http://knowles201.github.io/index.htm" class="homePage"> Home Page</a>
+
+    <div class="dateFooter">
+        <h4 style="text-align: center; color:#14bf95"> Today is: </h4>
+        <p id="date" style="text-align:center;">
+        <script src="myjavascript.js"></script></p>
+    </div>
+
 </body>
 </html>
