--- a/focussupplementpage.html
+++ b/focussupplementpage.html
@@ -7,7 +7,7 @@
     <style type="text/css">
         @import url(style.css);
     </style>
-
+    <script src="myjavascript.js"></script>
 </head>
 <body style="padding-bottom: 150px;">
 
@@ -101,5 +101,10 @@ Forget memory loss, get Absolute Attention!</pre>
 
     <!--Footer Links--> 
     <a href="http://knowles201.github.io/index.htm" class="homePage"> Home Page</a>
+
+    <div class="dateFooter">
+    <h4 style="text-align: center; color:#14bf95"> Today is: </h4>
+    <p id="date" style="text-align:center;"> <script src="myjavascript.js"></script></p>
+    </div>
     </body>
 </html>
