Added Navigation Menu
added navigation menu

--- a/contactuspage.html
+++ b/contactuspage.html
@@ -14,6 +14,19 @@
     <!--Contact Us Heading-->
     <body style="padding-bottom: 150px;">
 
+        <!--Navigation Menu-->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="http://knowles201.github.io/index.html">Home</a>
+            <a href="http://knowles201.github.io/energysupplementpage.html">Shop Energy Supplements</a>
+            <a href="http://knowles201.github.io/focussupplementpage.html">Shop Focus Supplements</a>
+            <a href="http://knowles201.github.io/contactuspage.html">Contact Us</a>
+        </div>
+
+        <div id="main">
+            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Home/Shop/Contact</span>
+        </div>
+
         <div style="border: solid 2px;">
             <h1 class="titleHeading">Brain Boost</h1>
             <p class="logoHeading">
@@ -39,7 +52,7 @@
         <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 305px; position:absolute; top:8px;right:6px;"></div>
         <div style="border-bottom: 4px solid #000; width: 1329px"></div>
 
-        <!--Links-->
+        <!--Links-
         <h3 class="linksHeading">
             Links
         </h3>
@@ -48,6 +61,7 @@
             <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
             <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
         </p>
+        -->
 
         <!--Form-->
         <center>
