--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -11,6 +11,19 @@
 </head>
 <body style="padding-bottom: 150px;">
 
+    <!--Navigation Menu-->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="http://knowles201.github.io/index.html">Home</a>
+        <a href="http://knowles201.github.io/energysupplementpage.html">Shop Energy Supplements</a>
+        <a href="http://knowles201.github.io/focussupplementpage.html">Shop Focus Supplements</a>
+        <a href="http://knowles201.github.io/contactuspage.html">Contact Us</a>
+    </div>
+
+    <div id="main">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Home/Shop/Contact</span>
+    </div>
+
     <!--Heading/Logo/Slogan-->
 
     <h1 class="titleHeading">Brain Boost</h1>
@@ -37,7 +50,7 @@
     <div style="border-left:4px solid #000;height:300px"></div> <div style="border-right: 4px solid #000; height: 300px; position:absolute; top:8px; left:1500px;"></div>
     <div style="border-bottom: 4px solid #000; width: 1495px"></div>
 
-    <!--Sidebar Links-->
+    <!--Sidebar Links-
     <h3 class="linksHeading">
         Links
     </h3>
@@ -46,7 +59,7 @@
         <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
         <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
     </p>    
-
+    -->
 
 
     <!--Table-->
