--- a/index.htm
+++ b/index.htm
@@ -7,13 +7,47 @@
   <title>Brain Boost</title>
   <meta name="description" content="HTML5 Template">
     <style type="text/css">
+
         @import url(style.css);
+
+        @media screen and (max-height: 450px) {
+        .sidenav {padding-top: 15px;}
+        .sidenav a {font-size: 18px;}
+        }
+
     </style>
+
+    <script src="myjavascript.js"></script>
 
 </head>
 
 <body style="padding-bottom: 150px;">
-    
+    <!-- Dropdown Menu 1 
+    <div class="dropdown">
+        <button class="dropbtn">Shop/Contact Us</button>
+        <div class="dropdown-content">
+            <a href="http://knowles201.github.io/index.html"><img src="images/homebutton.png" width="250" height="95" /></a>
+            <a href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
+            <a href="http://knowles201.github.io/focussupplementpage.html"><img src="images/focuslink3.jpg" width="250" height="95"/></a>
+            <a href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
+            
+        </div>
+    </div>
+    -->
+    <!--Menu 2-->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="http://knowles201.github.io/index.html">Home</a>
+        <a href="http://knowles201.github.io/energysupplementpage.html">Shop Energy Supplements</a>
+        <a href="http://knowles201.github.io/focussupplementpage.html">Shop Focus Supplements</a>
+        <a href="http://knowles201.github.io/contactuspage.html">Contact Us</a>
+    </div>
+
+    <div id="main">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Home/Shop/Contact</span>
+    </div>
+
+
     <!--Heading/Logo/Slogan-->
     <div style="border: solid 2px;">
     <h1 class="titleHeading" >Brain Boost</h1>
@@ -51,7 +85,7 @@
 
             <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <!--Sidebar Links-->
+    <!--Sidebar Links Below, Used on previous version of brainboost website
             <h3 class="linksHeading">
                 Links
             </h3>
@@ -60,6 +94,6 @@
                 <a class="energyStoreLink" href="http://knowles201.github.io/energysupplementpage.html"><img src="images/energylink.jpg" width="250" height="95" /></a>
                 <a class="contactUsLink" href="http://knowles201.github.io/contactuspage.html"><img src="images/contactuslink.png" width="250" height="95" /></a>
             </p>
-  
+  -->
 </body>
 </html>
