updated broken link
updated broken link

--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
     <!--Menu 2-->
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="http://knowles201.github.io/index.html">Home</a>
+        <a href="http://knowles201.github.io/index.htm">Home</a>
         <a href="http://knowles201.github.io/energysupplementpage.html">Shop Energy Supplements</a>
         <a href="http://knowles201.github.io/focussupplementpage.html">Shop Focus Supplements</a>
         <a href="http://knowles201.github.io/contactuspage.html">Contact Us</a>
