Added slideshow on homepage
slideshow on homepage added

--- a/energysupplementpage.html
+++ b/energysupplementpage.html
@@ -124,5 +124,8 @@ This natural energy booster prevents muscle soreness and brainfog.</pre>
         <script src="myjavascript.js"></script></p>
     </div>
 
+    <!--Slideshow Code-->
+    
+
 </body>
 </html>
